gateway-react/target/classes/META-INF/dekorate/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
    app.dekorate.io/commit-id: 817887a1e8f4636b685f11a875911e4ffc08ce65
  labels:
    app.kubernetes.io/name: gateway-react
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: gateway-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0-SNAPSHOT
      app.kubernetes.io/name: gateway-react
  template:
    metadata:
      annotations:
        app.dekorate.io/vcs-url: <<unknown>>
        app.dekorate.io/commit-id: 817887a1e8f4636b685f11a875911e4ffc08ce65
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: gateway-react
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SPRING_CONFIG_IMPORT
              value: configtree:/etc/config/
          image: gateway-react:1.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: gateway-react
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /etc/config/
              name: gateway-config-volume
              readOnly: false
              subPath: ""
      volumes:
        - configMap:
            defaultMode: 420
            name: gateway-config
            optional: true
          name: gateway-config-volume
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
    app.dekorate.io/commit-id: 817887a1e8f4636b685f11a875911e4ffc08ce65
  labels:
    app.kubernetes.io/name: gateway-react
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: gateway-react
spec:
  rules:
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: gateway-react
                port:
                  name: http
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
    app.dekorate.io/commit-id: 817887a1e8f4636b685f11a875911e4ffc08ce65
  labels:
    app.kubernetes.io/name: gateway-react
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: gateway-react
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: gateway-react
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
